--- a/indix.html
+++ b/indix.html
@@ -12,16 +12,14 @@
 <body>
 
 <div class="container-fluid">
-  <h1>Responsive Columns</h1>
+  <h1>Two Unequal Responsive Columns</h1>
   <p>Resize the browser window to see the effect.</p>
   <p>The columns will automatically stack on top of each other when the screen is less than 576px wide.</p>
   <div class="row">
-    <div class="col-sm-3" style="background-color:lavender;">.col-sm-3</div>
-    <div class="col-sm-3" style="background-color:lavenderblush;">.col-sm-3</div>
-    <div class="col-sm-3" style="background-color:lavender;">.col-sm-3</div>
-    <div class="col-sm-3" style="background-color:lavenderblush;">.col-sm-3</div>
+    <div class="col-sm-4" style="background-color:lavender;">.col-sm-4</div>
+    <div class="col-sm-8" style="background-color:lavenderblush;">.col-sm-8</div>
   </div>
 </div>
-
+    
 </body>
 </html>
